--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,12 @@
-<html>
-    <head>
-        <title>Muj blog</title>
-    </head>
-<body>
-   <div>
-       <h1><a href="/">Muj blog</a></h1>
-   </div>
-   <div>
-       <p>vytvoreno: 5.listopadu 2017</p>
-       <h2><a href="">Muj prvni post</a></h2>
-       <p>Par kecu</p>
-   </div>
-    <div>
-       <p>vytvoreno: 5.listopadu 2017</p>
-       <h2><a href="">Muj durhy post</a></h2>
-       <p>Par dalsich kecu</p>
-   </div>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+    {% block content %}
+         {% for post in posts %}
+             <div class="post">
+                <div class="date">
+                {{ post.published_date }}
+                </div>
+             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+             <p>{{ post.text|linebreaksbr }}</p>
+             </div>
+        {% endfor %}
+{% endblock %}
